# IN-practica3

./: .gitignore  README.md  pyproject.toml
doc/: bibliografia.bib  main.tex
doc/portada/: portada.tex
doc/prefacios/: submissions.tex
doc/secciones/sec1/: introduccion.tex
doc/secciones/sec2/: eda.tex  experimentacion.tex
doc/secciones/sec3/: experimentacion.tex
notebooks/: EDA.py  regression.py  regression01.py  regression02.py  regression03.py  regression04.py  regression05.py  regression06.py  regression07.py  regression08.py  regression14.py  regression15.py  regression16.py  regression17.py  regression18.py  regressionA.py  regressionB.py  regressionC.py  regressionD.py  regressionE.py
