[project]
name = "in-practica3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "marimo>=0.18.4",
    "numpy>=2.3.5",
    "plotly>=6.5.0",
    "polars>=1.36.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.1.2",
]
