[project]
name = "in-practica3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "catboost>=1.2.8",
    "lightgbm>=4.6.0",
    "marimo>=0.18.4",
    "numpy>=2.3.5",
    "optuna>=4.6.0",
    "plotly>=6.5.0",
    "polars>=1.36.1",
    "pytorch-forecasting>=1.5.0",
    "scikit-learn>=1.8",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "xgboost>=3.1.2",
]
